minikube/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
    name: simple-auth
spec:
    replicas: 1
    template:
        metadata:
            labels:
                app: simple-auth
        spec:
            containers: 
            - name: simple-auth
              image: xovox/simple-auth:0.0.1
              ports:
              - containerPort: 3000
